--- a/ProjetDotNet/ProjetDotNet.csproj
+++ b/ProjetDotNet/ProjetDotNet.csproj
@@ -49,6 +49,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Filtre.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Filtre.Designer.cs">
+      <DependentUpon>Filtre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Graph.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +69,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Filtre.resx">
+      <DependentUpon>Filtre.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Graph.resx">
       <DependentUpon>Graph.cs</DependentUpon>
       <SubType>Designer</SubType>
